[gd_scene load_steps=5 format=3 uid="uid://cblfic0xrpsfn"]

[ext_resource type="Script" uid="uid://fxsikc55lxyj" path="res://Scenes/HUD/hud.gd" id="1_33i1w"]

[sub_resource type="LabelSettings" id="LabelSettings_ipdwu"]
font_size = 48
font_color = Color(1, 1, 0.180392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_33i1w"]
font_size = 48
font_color = Color(1, 1, 0.180392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5aai8"]
font_size = 64
font_color = Color(1, 1, 0.180392, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_33i1w")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Score" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "SCORE:"
label_settings = SubResource("LabelSettings_ipdwu")

[node name="Lives" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
text = "LIVES:"
label_settings = SubResource("LabelSettings_33i1w")

[node name="MessageLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "CRASH BOOM!"
label_settings = SubResource("LabelSettings_5aai8")

[node name="StartButton" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="pressed" from="MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
